--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -6,7 +6,7 @@
 - [1. APIC timer中断](#1-apic-timer中断)
 - [2. 相关结构体](#2-相关结构体)
 - [3. 创建和初始化虚拟定时器设备](#3-创建和初始化虚拟定时器设备)
-- [4. 启动定时器](#4-启动定时器)
+- [4. 设置定时器Set APIC Timer](#4-设置定时器set-apic-timer)
   - [4.1. 定时器的触发](#41-定时器的触发)
   - [4.2. 整体流程](#42-整体流程)
   - [4.3. 入口代码](#43-入口代码)
@@ -69,13 +69,13 @@ int kvm_create_lapic(struct kvm_vcpu *vcpu, int timer_advance_ns)
 
 首先创建一个**定时器**，然后初始化**APIC Timer设备**产生**中断的函数**，实际就是定时器回调函数。
 
-# 4. 启动定时器
+# 4. 设置定时器Set APIC Timer
 
 ## 4.1. 定时器的触发
 
 ```cpp
 // 写寄存器 IMICT, 初始计数寄存器, one-shot/period
-kvm_lapic_reg_write(struct kvm_lapic *apic, u32 reg, u32 val)
+void kvm_lapic_reg_write(struct kvm_lapic *apic, u32 reg, u32 val)
 
         case APIC_TMICT:
                 // tscdeadline模式, 直接中断返回
