--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -16,8 +16,9 @@
     - [4.5.2. start_sw_timer(): 使用sw timer](#452-start_sw_timer-使用sw-timer)
     - [4.5.3. start_sw_period(): 周期性或一次性模式](#453-start_sw_period-周期性或一次性模式)
     - [4.5.4. start_sw_tscdeadline(): tscdeadline模式](#454-start_sw_tscdeadline-tscdeadline模式)
-    - [4.5.5. apic_timer_fn(): hrtimer到期的响应函数](#455-apic_timer_fn-hrtimer到期的响应函数)
     - [4.5.6. apic_timer_expired(): apic timer已经到期处理](#456-apic_timer_expired-apic-timer已经到期处理)
+- [](#)
+  - [4.5.5. apic_timer_fn(): hrtimer到期的响应函数](#455-apic_timer_fn-hrtimer到期的响应函数)
 
 <!-- /code_chunk_output -->
 
@@ -606,37 +607,13 @@ static void start_sw_tscdeadline(struct kvm_lapic *apic)
                 // 启用hrtimer, 超时时间是expire
                 hrtimer_start(&ktimer->timer, expire, HRTIMER_MODE_ABS_HARD);
         } else
-                // 直接注入
+                // timer超时, 直接注入
                 apic_timer_expired(apic, false);
         // 恢复中断
         local_irq_restore(flags);
 }
 ```
 
-### 4.5.5. apic_timer_fn(): hrtimer到期的响应函数
-
-hrtimer到期后的响应函数
-
-```cpp
-static enum hrtimer_restart apic_timer_fn(struct hrtimer *data)
-{
-        struct kvm_timer *ktimer = container_of(data, struct kvm_timer, timer);
-        struct kvm_lapic *apic = container_of(ktimer, struct kvm_lapic, lapic_timer);
-        // 到期处理函数
-        apic_timer_expired(apic, true);
-        // 周期性
-        if (lapic_is_periodic(apic)) {
-                // 设置周期性的下一次目标超时时间
-                advance_periodic_target_expiration(apic);
-                // 修改hrtimer
-                hrtimer_add_expires_ns(&ktimer->timer, ktimer->period);
-                // 重启hrtimer
-                return HRTIMER_RESTART;
-        } else
-                // 一次性或tscdeadline, 不重启
-                return HRTIMER_NORESTART;
-}
-```
 
 ### 4.5.6. apic_timer_expired(): apic timer已经到期处理
 
@@ -716,7 +693,32 @@ int kvm_apic_local_deliver(struct kvm_lapic *apic, int lvt_type)
 
 `kvm_apic_local_deliver()`用于传递中断到lapci相应功能单元，`__apic_accept_irq`函数在`中断虚拟化`有分析
 
+#
 
+## 4.5.5. apic_timer_fn(): hrtimer到期的响应函数
+
+hrtimer到期后的响应函数
+
+```cpp
+static enum hrtimer_restart apic_timer_fn(struct hrtimer *data)
+{
+        struct kvm_timer *ktimer = container_of(data, struct kvm_timer, timer);
+        struct kvm_lapic *apic = container_of(ktimer, struct kvm_lapic, lapic_timer);
+        // 到期处理函数
+        apic_timer_expired(apic, true);
+        // 周期性
+        if (lapic_is_periodic(apic)) {
+                // 设置周期性的下一次目标超时时间
+                advance_periodic_target_expiration(apic);
+                // 修改hrtimer
+                hrtimer_add_expires_ns(&ktimer->timer, ktimer->period);
+                // 重启hrtimer
+                return HRTIMER_RESTART;
+        } else
+                // 一次性或tscdeadline, 不重启
+                return HRTIMER_NORESTART;
+}
+```
 
 
 http://chinaunix.net/uid-25739055-id-4092821.html
