--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -168,16 +168,6 @@ start_apic_timer()  // 启动apic timer定时器
  |       |   |   ├─ apic_timer_expired(apic, false); // 已经到期了
  |       |   |   └─ local_irq_restore(flags); // 恢复中断
  |       └─ preempt_enable(); // 打开抢占
-
-// hrtimer到期处理函数
-apic_timer_fn()  // hrtimer到期处理函数
- ├─ apic_timer_expired(apic, false); // 已经到期了
- |   ├─ set_target_expiration(apic, count_reg); // 
- ├─ lapic_is_periodic(apic) // 周期性
- |   ├─ advance_periodic_target_expiration(apic); // 设置周期性的目标过期时间
- |   ├─ hrtimer_add_expires_ns(&ktimer->timer, ktimer->period); // 修改hrtimer, 以便再次重启使用 
- |   └─ return HRTIMER_RESTART; // 周期性的, 所以重启hrtimer
- └─ return HRTIMER_NORESTART; // one-shot/tscdeadline模式, 不重启hrtimer
 ```
 
 ## 4.3. 入口代码
@@ -698,6 +688,17 @@ int kvm_apic_local_deliver(struct kvm_lapic *apic, int lvt_type)
 
 ## 4.5.5. apic_timer_fn(): hrtimer到期的响应函数
 
+```cpp
+// hrtimer到期处理函数
+apic_timer_fn()  // hrtimer到期处理函数
+ ├─ apic_timer_expired(apic, false); // 已经到期了
+ |   ├─ set_target_expiration(apic, count_reg); // 
+ ├─ lapic_is_periodic(apic) // 周期性
+ |   ├─ advance_periodic_target_expiration(apic); // 设置周期性的目标过期时间
+ |   ├─ hrtimer_add_expires_ns(&ktimer->timer, ktimer->period); // 修改hrtimer, 以便再次重启使用 
+ |   └─ return HRTIMER_RESTART; // 周期性的, 所以重启hrtimer
+ └─ return HRTIMER_NORESTART; // one-shot/tscdeadline模式, 不重启hrtimer
+```
 hrtimer到期后的响应函数
 
 ```cpp
