--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -14,8 +14,8 @@
   - [4.5. restart_apic_timer(): 重启apic timer定时器](#45-restart_apic_timer-重启apic-timer定时器)
     - [4.5.1. start_hv_timer(): 优先使用hv timer](#451-start_hv_timer-优先使用hv-timer)
     - [4.5.2. start_sw_timer(): 使用sw timer](#452-start_sw_timer-使用sw-timer)
-    - [4.5.3. start_sw_period(): 周期性或一次性模式](#453-start_sw_period-周期性或一次性模式)
-    - [4.5.4. start_sw_tscdeadline(): tscdeadline模式](#454-start_sw_tscdeadline-tscdeadline模式)
+      - [4.5.3. start_sw_period(): 周期性或一次性模式](#453-start_sw_period-周期性或一次性模式)
+      - [4.5.4. start_sw_tscdeadline(): tscdeadline模式](#454-start_sw_tscdeadline-tscdeadline模式)
     - [4.5.5. apic_timer_expired(): apic timer已经到期处理](#455-apic_timer_expired-apic-timer已经到期处理)
 - [5.](#5)
   - [5.1. apic_timer_fn(): hrtimer到期的响应函数](#51-apic_timer_fn-hrtimer到期的响应函数)
@@ -490,7 +490,7 @@ static void start_sw_timer(struct kvm_lapic *apic)
 
 4. 针对tscdeadline的, 调用`start_sw_tscdeadline()`;
 
-### 4.5.3. start_sw_period(): 周期性或一次性模式
+#### 4.5.3. start_sw_period(): 周期性或一次性模式
 
 使用`apic->lapic_timer.target_expiration`
 
@@ -517,9 +517,10 @@ static void start_sw_period(struct kvm_lapic *apic)
 }
 ```
 
+1. 如果**周期为0**(一般是IMICT初始计数寄存器值), 表明**停用oneshot或者周期性**, 则直接返回, 不启用
+
 如果当前时间晚于目标过期时间, 即**已经过期**的:
 
-1. 如果**周期为0**(一般是IMICT初始计数寄存器值), 表明**停用oneshot或者周期性**, 则直接返回, 不启用
 2. 调用`apic_timer_expired()`进行中断注入?, 
 3. 如果是**一次性的话**, 那就此**结束**, 直接返回
 4. 否则(**周期性**)调用`advance_periodic_target_expiration()`设置**周期性目标过期时间**
@@ -559,7 +560,7 @@ static void advance_periodic_target_expiration(struct kvm_lapic *apic)
 }
 ```
 
-### 4.5.4. start_sw_tscdeadline(): tscdeadline模式
+#### 4.5.4. start_sw_tscdeadline(): tscdeadline模式
 
 使用`apic->lapic_timer.tscdeadline`
 
