--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -14,9 +14,9 @@
   - [4.5. restart_apic_timer(): 重启apic timer定时器](#45-restart_apic_timer-重启apic-timer定时器)
     - [4.5.1. start_hv_timer(): 优先使用hv timer](#451-start_hv_timer-优先使用hv-timer)
     - [4.5.2. start_sw_timer(): 使用sw timer](#452-start_sw_timer-使用sw-timer)
-      - [4.5.3. start_sw_period(): 周期性或一次性模式](#453-start_sw_period-周期性或一次性模式)
-      - [4.5.4. start_sw_tscdeadline(): tscdeadline模式](#454-start_sw_tscdeadline-tscdeadline模式)
-    - [4.5.5. apic_timer_expired(): apic timer已经到期处理](#455-apic_timer_expired-apic-timer已经到期处理)
+      - [4.5.2.1. start_sw_period(): 周期性或一次性模式](#4521-start_sw_period-周期性或一次性模式)
+      - [4.5.2.2. start_sw_tscdeadline(): tscdeadline模式](#4522-start_sw_tscdeadline-tscdeadline模式)
+    - [4.5.3. apic_timer_expired(): apic timer已经到期处理](#453-apic_timer_expired-apic-timer已经到期处理)
 - [5.](#5)
   - [5.1. apic_timer_fn(): hrtimer到期的响应函数](#51-apic_timer_fn-hrtimer到期的响应函数)
 
@@ -490,7 +490,7 @@ static void start_sw_timer(struct kvm_lapic *apic)
 
 4. 针对tscdeadline的, 调用`start_sw_tscdeadline()`;
 
-#### 4.5.3. start_sw_period(): 周期性或一次性模式
+#### 4.5.2.1. start_sw_period(): 周期性或一次性模式
 
 使用`apic->lapic_timer.target_expiration`
 
@@ -518,18 +518,18 @@ static void start_sw_period(struct kvm_lapic *apic)
 ```
 
 1. 如果**周期为0**(一般是IMICT初始计数寄存器值), 表明**停用oneshot或者周期性**, 则直接返回, 不启用
+2. 如果当前时间晚于目标过期时间, 即**已经过期**的:
+- 调用`apic_timer_expired()`处理过期, 其中会进行中断注入, 下面详细讲
+- 如果是**一次性的话**, 那就此**结束**, 直接返回
+- 否则(**周期性**)调用`advance_periodic_target_expiration()`设置**下一次的周期性目标过期时间**
+3. 如果没有过期, 则直接启动apic timer的hrtimer, 超时时间是`apic->lapic_timer.target_expiration`(`ktime_get() + deadline`), 
 
-如果当前时间晚于目标过期时间, 即**已经过期**的:
+apic timer的hrtimer是在lapic创建时候初始化的, 该hrtimer的中断响应回调函数是`apic_timer_fn()`, 详细见`中断虚拟化`部分
 
-2. 调用`apic_timer_expired()`进行中断注入?, 
-3. 如果是**一次性的话**, 那就此**结束**, 直接返回
-4. 否则(**周期性**)调用`advance_periodic_target_expiration()`设置**周期性目标过期时间**
-5. 启动hrtimer, 超时时间是`apic->lapic_timer.target_expiration`(`ktime_get() + deadline`), 在
-6. 如果没有过期, 则直接启动apic timer的hrtimer.
+总结: 
 
-apic timer的hrtimer实在lapic创建时候初始化的, 该hrtimer的中断响应回调函数是`apic_timer_fn()`, 详细见`中断虚拟化`部分
-
-总结: 对于周期性的, 无论如何都会**启用hrtimer**; 对于一次性的, **已经过期的直接注入一次**, 否则**启用hrtimer**
+- 对于周期性的, 无论如何都会**启用hrtimer**; 
+- 对于一次性的, **已经过期的直接注入一次**, 否则**启用hrtimer**
 
 ```cpp
 // 设置周期性的下一次超时时间
@@ -560,7 +560,7 @@ static void advance_periodic_target_expiration(struct kvm_lapic *apic)
 }
 ```
 
-#### 4.5.4. start_sw_tscdeadline(): tscdeadline模式
+#### 4.5.2.2. start_sw_tscdeadline(): tscdeadline模式
 
 使用`apic->lapic_timer.tscdeadline`
 
@@ -607,7 +607,9 @@ static void start_sw_tscdeadline(struct kvm_lapic *apic)
 ```
 
 
-### 4.5.5. apic_timer_expired(): apic timer已经到期处理
+### 4.5.3. apic_timer_expired(): apic timer已经到期处理
+
+无论hvtimer(preemption timer)还是sw timer, 都可能会调用到
 
 ```cpp
 static void apic_timer_expired(struct kvm_lapic *apic, bool from_timer_fn)
