--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/6. LVT寄存器-本地中断源.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/6. LVT寄存器-本地中断源.md
@@ -22,9 +22,25 @@ LVT（**Local Vector Table**）寄存器是**local APIC本地中断源产生者*
 
 ① LVT CMCI寄存器：地址偏移量在2F0H。
 
+负责发送Corrected Machine Check Error Interrupt，即被纠正的Machine Check Error累积至超过一个阈值后，便会引起一个CMCI中断（从至强5500起才有此项，该功能默认禁止）
+
 ② LVT Timer寄存器：地址偏移量在320H。
 
+负责发送由**APIC Timer**产生的**中断**
+LVT Thermal Monitor Register，Base + 0x330
+
+LVT Performance Counter Register，Base + 0x340（此地址仅供参考，该寄存器具体在何处是implementation specific的）
+
+LVT LINT0 Register，Base + 0x350
+负责转发来自LINT0引脚的中断
+LVT LINT1 Register，Base + 0x360
+负责转发来自LINT1引脚的中断
+LVT Error Register，Base + 0x370
+负责发送APIC内部错误时产生的中断
+
 ③ LVT Thermal Monitor寄存器：地址偏移量在330H。
+
+负责发送由**温度传感器**产生的中断（从奔腾4起才有此项）
 
 ④ LVT Performance Counter寄存器：地址偏移量在340H。
 
