--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/12. APIC timer.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/12. APIC timer.md
@@ -123,7 +123,7 @@ APIC定时器一般包含2-3种定时器模式，前两种（周期触发periodi
 
 使用**periodic**计数模式，当**current\-count**减为**0**时，产生**timer中断**。
 
-local APIC将在**current\-count寄存器**里装入**initial\-count**值**重新开始计数！！！**，从而**周期性**地产生timer中断，除非**写入0值**到initial\-count寄存器里。
+local APIC将在**current\-count寄存器**里装入**initial\-count**值**重新开始计数！！！**，从而**周期性**地产生timer中断，除非**写入0值**到`initial-count`寄存器里。
 
 ```x86asm
 ； 设置 LVT timer
@@ -181,9 +181,10 @@ TSC见`15.6`.
 no_support：
        ； … …
 ```
-上面代码显示，当处理器支持TSC\-deadline计数模式时，将LVT timer寄存器设置为TSC-deadline模式，软件通过读取当前的TSC值，将目标TSC值设置为当前的TSC值加上256。
 
-当往IA32\_TSC\_DEADLINE寄存器写入0时，将停止APIC timer的运作。
+上面代码显示，当处理器支持`TSC-deadline`计数模式时，将**LVT timer寄存器**设置为`TSC-deadline`模式，**软件**通过读取**当前的TSC值**，将**目标TSC值**设置为**当前的TSC值加上256**。
+
+当往`IA32_TSC_DEADLINE`寄存器**写入0**时，将**停止APIC timer**的运作。
 
 >实验18-11：测试APIC timer的one-shot模式
 
