--- Auto-Git Commit ---

--- a/Architecture/x86/7. 时钟.md
+++ b/Architecture/x86/7. 时钟.md
@@ -123,6 +123,10 @@ HPET支持**周期性**和**单次计时**两种工作方式。
 
 # 3. 操作系统的时钟观
 
+硬件方面，x86 主流平台，计时靠tsc，定时靠local apic timer。
+
+软件方面，linux, 低精度，高精度，先低精度然后切换到高精度。
+
 两个系统时钟的常识jiffies和xtimer，前者是linux系统时钟的累计数字，后者是系统的墙上时间。
 
 从操作系统角度看, **时钟作用**可以分为如下两类.
