--- a/Virtualization/KVM/6. 虚拟机时钟模拟/2. PIT(8254)模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/2. PIT(8254)模拟.md
@@ -4,6 +4,7 @@
 <!-- code_chunk_output -->
 
 - [1. PIT(8254)模拟](#1-pit8254模拟)
+- [整体流程](#整体流程)
 - [2. 相关结构体](#2-相关结构体)
   - [2.1. struct kvm_pit: pit芯片](#21-struct-kvm_pit-pit芯片)
 - [3. 初始化虚拟PIT](#3-初始化虚拟pit)
@@ -33,6 +34,12 @@
 Programmable Interval Timer, **可编程中断/间隔时钟**
 
 KVM很多设备都是使用QEMU进行模拟的, 但是时钟已经在KVM重做了, 为了提升性能.
+
+# 整体流程
+
+![2020-04-18-17-59.png](./images/2020-04-18-17-59.png)
+
+1. 
 
 # 2. 相关结构体
 
