--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/2. PIT(8254)模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/2. PIT(8254)模拟.md
@@ -506,7 +506,7 @@ pit的原本语义中, 频率为**1000Hz左右**, 即**每次中断间隔约为1
 
 不过在linux中, 已经被高精度时钟取代了, 所以可以看到, 哪怕基于KVM的虚拟机也已经**放弃**了基于PIT的**time tick**.
 
-目前仅仅保留了计数器系统, 通过**时钟中断**来满足程序的**定时器需求**.
+目前仅仅保留了**计数器系统**, 通过**时钟中断**来满足程序的**定时器需求**.
 
 # 5. 创建定时器
 
@@ -514,7 +514,7 @@ pit的原本语义中, 频率为**1000Hz左右**, 即**每次中断间隔约为1
 
 那什么时候创建定时器? 
 
-当guest os通过**寄存器操作**启动时, 即**客户机读写了8254的IO**，写了PIT channel的IO，说我需要一个定时器, 从而启动一个hrtimer来模拟**时钟中断源**.
+当guest os通过**寄存器操作**启动时, 即**客户机读写了8254的IO**，写了PIT channel的IO，说我**需要一个定时器**, 从而启动一个hrtimer来模拟**时钟中断源**.
 
 在前面创建pit中初始化了pit设备的读写函数.
 
