--- Auto-Git Commit ---

--- a/Architecture/x86/7. 时钟.md
+++ b/Architecture/x86/7. 时钟.md
@@ -22,6 +22,12 @@
 
 现代计算机中, 操作系统中很多事件都是时钟驱动的, 例如进程调度、定时器等.
 
+操作系统时钟从作用上分为两种: 计时和定时器
+
+硬件方面，x86 主流平台，**计时**靠**tsc**，**定时**靠**local apic timer**。
+
+软件方面，linux, 低精度，高精度，先低精度然后切换到高精度。
+
 时钟根据**工作方式**不同, 可以分为如下两类.
 
 ## 1.1. 周期性时钟
@@ -38,7 +44,7 @@
 
 其工作方式和**到达阙值产生中断的周期性时钟**类似, 不同的是**产生中断后阙值不会自动增加**, 而是需要**软件**(通常是时钟中断处理函数)**增加该阙值**. 
 
-这提供给软件**动态调整下一次时钟中断**到来时间的能力, 使一些新技术,例如无滴答声内核(Tickles Kernel)的实现成为可能.
+这提供给软件**动态调整下一次时钟中断**到来时间的能力, 使一些新技术,例如**无滴答声内核**(**Tickless Kernel**)的实现成为可能.
 
 # 2. x86平台的常用时钟
 
