--- a/Virtualization/KVM/6. 虚拟机时钟模拟/2. PIT(8254)模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/2. PIT(8254)模拟.md
@@ -4,28 +4,28 @@
 <!-- code_chunk_output -->
 
 - [1. PIT(8254)模拟](#1-pit8254模拟)
-- [整体流程](#整体流程)
-- [2. 相关结构体](#2-相关结构体)
-  - [2.1. struct kvm_pit: pit芯片](#21-struct-kvm_pit-pit芯片)
-- [3. 初始化虚拟PIT](#3-初始化虚拟pit)
-  - [3.1. QEMU](#31-qemu)
-  - [3.2. 整体流程](#32-整体流程)
-  - [3.3. 入口代码](#33-入口代码)
-  - [3.4. 初始化PIT的worker和work](#34-初始化pit的worker和work)
-  - [3.5. 初始化PIT的定时器hrtimer](#35-初始化pit的定时器hrtimer)
-  - [3.6. kvm_pit_reset(): 重置pit](#36-kvm_pit_reset-重置pit)
-    - [3.6.1. pit_load_count(): 装载计数值](#361-pit_load_count-装载计数值)
-    - [3.6.2. kvm_pit_reset_reinject(): 重置pit重注入信息](#362-kvm_pit_reset_reinject-重置pit重注入信息)
-  - [3.7. kvm_pit_set_reinject(): 设置pit重注入信息](#37-kvm_pit_set_reinject-设置pit重注入信息)
-  - [3.8. 注册pit设备和pio接口](#38-注册pit设备和pio接口)
-- [4. pit的time tick和timer](#4-pit的time-tick和timer)
-- [5. 创建定时器](#5-创建定时器)
-  - [5.1. 整体流程](#51-整体流程)
-  - [5.2. 入口代码](#52-入口代码)
-  - [5.3. create_pit_timer(): 创建定时器](#53-create_pit_timer-创建定时器)
-  - [5.4. pit_timer_fn(): 定时器中断函数](#54-pit_timer_fn-定时器中断函数)
-  - [5.5. pit_do_work(): 时钟中断注入](#55-pit_do_work-时钟中断注入)
-  - [5.6. 定时器的中断ack](#56-定时器的中断ack)
+- [2. 整体流程](#2-整体流程)
+- [3. 相关结构体](#3-相关结构体)
+  - [3.1. struct kvm_pit: pit芯片](#31-struct-kvm_pit-pit芯片)
+- [4. 初始化虚拟PIT](#4-初始化虚拟pit)
+  - [4.1. QEMU](#41-qemu)
+  - [4.2. 整体流程](#42-整体流程)
+  - [4.3. 入口代码](#43-入口代码)
+  - [4.4. 初始化PIT的worker和work](#44-初始化pit的worker和work)
+  - [4.5. 初始化PIT的定时器hrtimer](#45-初始化pit的定时器hrtimer)
+  - [4.6. kvm_pit_reset(): 重置pit](#46-kvm_pit_reset-重置pit)
+    - [4.6.1. pit_load_count(): 装载计数值](#461-pit_load_count-装载计数值)
+    - [4.6.2. kvm_pit_reset_reinject(): 重置pit重注入信息](#462-kvm_pit_reset_reinject-重置pit重注入信息)
+  - [4.7. kvm_pit_set_reinject(): 设置pit重注入信息](#47-kvm_pit_set_reinject-设置pit重注入信息)
+  - [4.8. 注册pit设备和pio接口](#48-注册pit设备和pio接口)
+- [5. pit的time tick和timer](#5-pit的time-tick和timer)
+- [6. 创建定时器](#6-创建定时器)
+  - [6.1. 整体流程](#61-整体流程)
+  - [6.2. 入口代码](#62-入口代码)
+  - [6.3. create_pit_timer(): 创建定时器](#63-create_pit_timer-创建定时器)
+- [7. pit_timer_fn(): 定时器中断函数](#7-pit_timer_fn-定时器中断函数)
+  - [7.1. pit_do_work(): 时钟中断注入](#71-pit_do_work-时钟中断注入)
+  - [7.2. 定时器的中断ack](#72-定时器的中断ack)
 
 <!-- /code_chunk_output -->
 
@@ -35,15 +35,15 @@ Programmable Interval Timer, **可编程中断/间隔时钟**
 
 KVM很多设备都是使用QEMU进行模拟的, 但是时钟已经在KVM重做了, 为了提升性能.
 
-# 整体流程
+# 2. 整体流程
 
 ![2020-04-18-17-59.png](./images/2020-04-18-17-59.png)
 
-1. 
+1. 虚拟机设置定时器, 即创建定时器, 会发生vm-exit,
 
-# 2. 相关结构体
+# 3. 相关结构体
 
-## 2.1. struct kvm_pit: pit芯片
+## 3.1. struct kvm_pit: pit芯片
 
 ```cpp
 struct kvm_kpit_channel_state {
@@ -100,11 +100,11 @@ struct kvm_pit {
 };
 ```
 
-# 3. 初始化虚拟PIT
+# 4. 初始化虚拟PIT
 
 真实物理pit有3个通道, 虚拟的PIT其实也是要符合这个设定, 进行全功能模拟, 所以一定要先看下PIT的功能描述.
 
-## 3.1. QEMU
+## 4.1. QEMU
 
 PIT创建:
 
@@ -114,7 +114,7 @@ kvm_vm_ioctl(kvm_state, KVM_CREATE_PIT2, &config);
 kvm_vm_ioctl(kvm_state, KVM_CREATE_PIT)
 ```
 
-## 3.2. 整体流程
+## 4.2. 整体流程
 
 ```cpp
 kvm_vm_ioctl()  // vm ioctl的入口
@@ -145,7 +145,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   └─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, KVM_SPEAKER_BASE_ADDRESS, 4, &pit->speaker_dev);   // 注册pit的speaker读写函数
 ```
 
-## 3.3. 入口代码
+## 4.3. 入口代码
 
 ```cpp
 case KVM_CREATE_PIT:
@@ -266,7 +266,7 @@ fail_request:
 
 从这里可以得出一个结论，**没有真正的时钟源**，是**没有办法模拟时钟的**。而关键就在于**时钟中断**，有了时钟中断，其他的**定时器计数**都可以通过**软件来实现**，所以在i8254.c里面的其他代码基本上是怎么实现模拟定时器的。
 
-## 3.4. 初始化PIT的worker和work
+## 4.4. 初始化PIT的worker和work
 
 ```cpp
 pit->worker = kthread_create_worker(0, "kvm-pit/%d", pid_nr);
@@ -282,7 +282,7 @@ worker主要函数有3个:
 - `kthread_queue_work(pool->worker, &pool->work);`: 将这个work添加到worker的工作队列, 让worker开始工作
 - `kthread_flush_work()`: 用来在最后要停止worker的处理线程之前,保证所有的work都已经处理了
 
-## 3.5. 初始化PIT的定时器hrtimer
+## 4.5. 初始化PIT的定时器hrtimer
 
 初始化一个高精准定时器，这个定时器就作为我们**虚拟时钟的时钟源**, 然而定时器的物理时钟源根据不同的硬件而不同
 
@@ -300,7 +300,7 @@ pit_state->timer.function = pit_timer_fn;
 
 由此可见, 所以**内核虚拟PIT**实际是利用**HOST**的**hrtimer实际时钟源**来提供**虚拟时钟**的。 
 
-## 3.6. kvm_pit_reset(): 重置pit
+## 4.6. kvm_pit_reset(): 重置pit
 
 ```cpp
 static void kvm_pit_reset(struct kvm_pit *pit)
@@ -327,7 +327,7 @@ static void kvm_pit_reset(struct kvm_pit *pit)
 1. 调用`pit_load_count()`, 注意这里面没有启用定时器, 反而清理了这个定时器
 2. `kvm_pit_reset_reinject()` 重置注入信息
 
-### 3.6.1. pit_load_count(): 装载计数值
+### 4.6.1. pit_load_count(): 装载计数值
 
 ```cpp
 static void pit_load_count(struct kvm_pit *pit, int channel, u32 val)
@@ -403,7 +403,7 @@ static void destroy_pit_timer(struct kvm_pit *pit)
 
 - 第三种情况删除失败，`hrtimer_cancel`函数会循环重试，等到定时器**执行完**的时候再删除。（这在多CPU系统中可能会发生)
 
-### 3.6.2. kvm_pit_reset_reinject(): 重置pit重注入信息
+### 4.6.2. kvm_pit_reset_reinject(): 重置pit重注入信息
 
 ```cpp
 static inline void kvm_pit_reset_reinject(struct kvm_pit *pit)
@@ -413,7 +413,7 @@ static inline void kvm_pit_reset_reinject(struct kvm_pit *pit)
 }
 ```
 
-## 3.7. kvm_pit_set_reinject(): 设置pit重注入信息
+## 4.7. kvm_pit_set_reinject(): 设置pit重注入信息
 
 ```cpp
 void kvm_pit_set_reinject(struct kvm_pit *pit, bool reinject)
@@ -450,7 +450,7 @@ void kvm_pit_set_reinject(struct kvm_pit *pit, bool reinject)
 }
 ```
 
-## 3.8. 注册pit设备和pio接口
+## 4.8. 注册pit设备和pio接口
 
 ```cpp
 
@@ -500,7 +500,7 @@ ret = kvm_io_bus_register_dev(kvm, KVM_PIO_BUS,
 
 因为没有speaker, 所以看不到
 
-# 4. pit的time tick和timer
+# 5. pit的time tick和timer
 
 pit的原本语义中, 频率为**1000Hz左右**, 即**每次中断间隔约为1ms**, 通常接**IRQ0**产生**周期性的时钟中断信号！！！** 来充当**系统定时器**, 软件可以通过`0x40~0x43 I/O`端口进行操作. 
 
@@ -508,7 +508,7 @@ pit的原本语义中, 频率为**1000Hz左右**, 即**每次中断间隔约为1
 
 目前仅仅保留了**计数器系统**, 通过**时钟中断**来满足程序的**定时器需求**.
 
-# 5. 创建定时器
+# 6. 创建定时器
 
 可以看到, 因为取消了基于PIT的time tick功能, 所以前面创建PIT没有真正创建定时器.
 
@@ -518,7 +518,7 @@ pit的原本语义中, 频率为**1000Hz左右**, 即**每次中断间隔约为1
 
 在前面创建pit中初始化了pit设备的读写函数.
 
-## 5.1. 整体流程
+## 6.1. 整体流程
 
 ```cpp
 handle_io()  // io vmexit入口
@@ -539,7 +539,7 @@ handle_io()  // io vmexit入口
 
 这个是启用了定时器, 后面还有**定时器中断处理流程**以及**时钟中断注入流程**.
 
-## 5.2. 入口代码
+## 6.2. 入口代码
 
 PIT的操作属于Port IO, 整体流程是`handle_io() -> kvm_fast_pio() -> kvm_fast_pio_out() -> emulator_pio_out_emulated() -> emulator_pio_in_out() -> kernel_pio() -> kvm_io_bus_write() -> __kvm_io_bus_write() -> kvm_iodevice_write() -> dev->ops->write()`, 详细见PIO部分内容
 
@@ -663,7 +663,7 @@ static void pit_latch_count(struct kvm_pit *pit, int channel)
 
 3. `pit_load_count`用于装载计数值, 查看上面的函数详细说明, 会调用`create_pit_timer`
 
-## 5.3. create_pit_timer(): 创建定时器
+## 6.3. create_pit_timer(): 创建定时器
 
 ```cpp
 #define NSEC_PER_SEC 1000000000L
@@ -730,7 +730,7 @@ static void create_pit_timer(struct kvm_pit *pit, u32 val, int is_period)
 
 pit初始化时候也注册了定时器的中断处理函数`it_state->timer.function = pit_timer_fn;`
 
-## 5.4. pit_timer_fn(): 定时器中断函数
+# 7. pit_timer_fn(): 定时器中断函数
 
 注册的定时器处理函数为：
 
@@ -762,7 +762,7 @@ static enum hrtimer_restart pit_timer_fn(struct hrtimer *data)
 
 如果**定时器周期触发**，则**再次启动定时器**，否则销毁, 详细看hrtimer的机制
 
-## 5.5. pit_do_work(): 时钟中断注入
+## 7.1. pit_do_work(): 时钟中断注入
 
 当定时器将时钟中断pending增加，并且添加完工作队列以后，接着就触发下面的时钟中断注入，如果上一个中断被接收，接着触发下一个。
 
@@ -801,7 +801,7 @@ static void pit_do_work(struct kthread_work *work)
 
 `kvm_apic_nmi_wd_deliver`最终会调用到`__apic_accept_irq`，在该函数里，设置**中断标志位**，然后通过`kvm_kick_vcpu`将**vcpu拉回到host**，等到**vcpu重新进入guest**时，将**中断信息**注入到**vmcs结构体**里，这样**vcpu回到guest**后就可以**处理tick中断**了。
 
-## 5.6. 定时器的中断ack
+## 7.2. 定时器的中断ack
 
 之前在pit初始化时候注册了中断ack函数, `pit_state->irq_ack_notifier.irq_acked = kvm_pit_ack_irq;`, 它会在**中断注入以后**被**中断控制器调用**。
 
