--- a/Virtualization/KVM/6. 虚拟机时钟模拟/2. PIT(8254)模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/2. PIT(8254)模拟.md
@@ -808,9 +808,32 @@ static void pit_do_work(struct kthread_work *work)
 
 ## 
 
-`kvm_set_irq`会触发中断, 详细见`中断虚拟化`.
+`kvm_set_irq`会触发中断, 详细见`中断虚拟化`. 根据irq查找所有的中断路由项, 然后遍历调用**每个路由实体**的set触发函数. 
 
-这里注意
+这里注意pit对应的irq是0, 在默认中断路由项初始化中(PIC和ioapic创建流程中), irq为0的是这样的
+
+```cpp
+// 默认中断路由项定义
+static const struct kvm_irq_routing_entry default_routing[] = {
+        ROUTING_ENTRY2(0),
+}
+
+#define IOAPIC_ROUTING_ENTRY(irq) \
+        { .gsi = irq, .type = KVM_IRQ_ROUTING_IRQCHIP,  \
+          .u.irqchip = { .irqchip = KVM_IRQCHIP_IOAPIC, .pin = (irq) } }
+
+#define SELECT_PIC(irq) \
+        ((irq) < 8 ? KVM_IRQCHIP_PIC_MASTER : KVM_IRQCHIP_PIC_SLAVE)
+
+#define PIC_ROUTING_ENTRY(irq) \
+        { .gsi = irq, .type = KVM_IRQ_ROUTING_IRQCHIP,  \
+          .u.irqchip = { .irqchip = SELECT_PIC(irq), .pin = (irq) % 8 } }
+// 具体定义
+#define ROUTING_ENTRY2(irq) \
+        IOAPIC_ROUTING_ENTRY(irq), PIC_ROUTING_ENTRY(irq)
+```
+
+可就是说`irq=0`对应的有2项, 这两项不同在于irqchip类型, 一个是`KVM_IRQCHIP_PIC_MASTER`, 一个是`KVM_IRQCHIP_IOAPIC`, 
 
 ## 7.2. 定时器的中断ack
 
