--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -1313,7 +1313,7 @@ static int __apic_accept_irq(struct kvm_lapic *apic, int delivery_mode,
                         // 请求 KVM_REQ_EVENT 事件
                         // 在下次vm-entry的时候会进行中断注入
                         kvm_make_request(KVM_REQ_EVENT, vcpu);
-                        // 重新调度
+                        // 重新调度, 强行使vcpu退出guest模式
                         kvm_vcpu_kick(vcpu);
                 }
                 break;
@@ -1376,7 +1376,7 @@ static int __apic_accept_irq(struct kvm_lapic *apic, int delivery_mode,
 
 该函数中会根据**不同的传递模式**处理消息 
 
-`kvm_vcpu_kick` 产生**处理器中断ipi** , **重新调度**，为中断注入做准备。
+`kvm_vcpu_kick` 产生**处理器中断ipi** , **重新调度**, 会使vcpu强行退出guest(即产生`vm-exit`)，为中断注入做准备。
 
 大部分情况都是`APIC_DM_FIXED`，在**该模式**下，**中断**被传递到**特定的CPU**，其中会调用`kvm_x86_ops->deliver_posted_interrupt`，实际上对应于`vmx.c`中的`vmx_deliver_posted_interrupt`
 
@@ -1720,7 +1720,9 @@ int kvm_apic_has_interrupt(struct kvm_vcpu *vcpu)
 }
 ```
 
-在这里会检查当前**是否有可注入的中断**，而具体检查过程时首先会通过`kvm_cpu_has_injectable_intr`函数，其中调用`kvm_apic_has_interrupt->apic_find_highest_irr->vmx_sync_pir_to_irr, vmx_sync_pir_to_irr`函数**对中断进行收集**，就是检查`vmx->pi_desc`中的**位图**，如果有，则会调用`kvm_apic_update_irr`把信息**更新到apic寄存器**里。
+在这里会检查当前**是否有可注入的中断**，而具体检查过程时首先会通过`kvm_cpu_has_injectable_intr`函数，其中调用`kvm_apic_has_interrupt->apic_find_highest_irr->vmx_sync_pir_to_irr`
+
+ `vmx_sync_pir_to_irr`函数**对中断进行收集**，就是检查`vmx->pi_desc`中的**位图**，如果有，则会调用`kvm_apic_update_irr`把信息**更新到apic寄存器**里。
 
 然后调用`apic_search_irr`获取**IRR寄存器中的中断**，没找到的话会返回-1. 
 
