--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/2. PIT(8254)模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/2. PIT(8254)模拟.md
@@ -833,7 +833,7 @@ static const struct kvm_irq_routing_entry default_routing[] = {
         IOAPIC_ROUTING_ENTRY(irq), PIC_ROUTING_ENTRY(irq)
 ```
 
-可就是说`irq=0`对应的有2项, 这两项不同在于irqchip类型, 一个是`KVM_IRQCHIP_PIC_MASTER`, 一个是`KVM_IRQCHIP_IOAPIC`, 而两项对应的set方法也不同, 分别是`kvm_set_pic_irq`和`kvm_set_ioapic_irq`.
+可就是说`irq=0`对应的有2项, 这两项不同在于irqchip类型, 一个是`KVM_IRQCHIP_PIC_MASTER`, 一个是`KVM_IRQCHIP_IOAPIC`, 而两项对应的set方法也不同, 分别是`kvm_set_pic_irq`和`kvm_set_ioapic_irq`. 这两种分别对应pic芯片类型和ioapic芯片类型的.
 
 在`pit_do_work`中, 也就一共会有4次调用set方法.
 
