--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -29,7 +29,7 @@
 前面提到, APIC Timer的APIC定时器有3种定时器模式. 从图中可以看到, timer中断大概分为下面几步
 
 1. 虚拟机设置APIC timer, 主要包括两个, 写IMICT寄存器(用于one-shot/period模式); 写TSCDEADLINE MSR寄存器(用于tscdeadline模式). 从而发生vm-exit, 进入KVM中
-2. 在KVM中, 模拟虚拟机的APIC设置, 即设置这几个寄存器, 然后进入Guest模式
+2. 在KVM中, 模拟虚拟机的APIC设置, 先设置这几个寄存器, 然后启用定时器(优先使用hv timer, ), 最后进入Guest模式
 3. 
 
 
@@ -131,7 +131,7 @@ start_apic_timer()  // 启动apic timer定时器
  |   └─ restart_apic_timer();  // 重启定时器
  |       ├─ preempt_disable(); // 关闭抢占
  |       ├─  !period(apic) && pending; return;// 如果apic timer当前不是周期模式(即一次性/tscdeadline模式)而且有pending事件, 直接返回, 不重启
- |       ├─ start_hv_timer(); // 优先使用hv timer, 
+ |       ├─ start_hv_timer(); // 优先使用hv timer, 即preemption timer
  |       |   ├─ kvm_can_use_hv_timer(vcpu); // 不能使用hv timer, 则直接返回false
  |       |   ├─ !apic->lapic_timer->tscdeadline; return false// tscdeadline是0, 则直接返回false
  |       |   ├─ kvm_x86_ops.set_hv_timer(vcpu, ktimer->tscdeadline, &expired); // 设置vmx->hv_deadline_tsc, 失败则直接返回false
