--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -29,7 +29,7 @@
 前面提到, APIC Timer的APIC定时器有3种定时器模式. 从图中可以看到, timer中断大概分为下面几步
 
 1. 虚拟机设置APIC timer, 主要包括两个, 写IMICT寄存器(用于one-shot/period模式); 写TSCDEADLINE MSR寄存器(用于tscdeadline模式). 从而发生vm-exit, 进入KVM中
-2. 在KVM中, 模拟虚拟机的APIC设置, 先设置这几个寄存器, 然后启用定时器(优先使用hv timer, ), 最后进入Guest模式
+2. 在KVM中, 模拟虚拟机的APIC设置, 先设置这几个寄存器, 然后启用lapic timer定时器(优先使用hv timer, 其次使用hrtimer), 最后进入Guest模式
 3. 
 
 
