--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -24,12 +24,14 @@
 
 # 1. APIC timer中断
 
+前面提到, APIC Timer的APIC定时器有3种定时器模式: 周期触发periodic和一次性触发one-shot和TSC-Deadline模式. 
+
 ![2020-05-26-09-28-21.png](./images/2020-05-26-09-28-21.png)
 
-前面提到, APIC Timer的APIC定时器有3种定时器模式. 从图中可以看到, timer中断大概分为下面几步
+从图中可以看到, timer中断大概分为下面几步
 
 1. 虚拟机设置APIC timer, 主要包括两个, 写IMICT寄存器(用于one-shot/period模式); 写TSCDEADLINE MSR寄存器(用于tscdeadline模式). 从而发生vm-exit, 进入KVM中
-2. 在KVM中, 模拟虚拟机的APIC设置, 先设置这几个寄存器, 然后启用lapic timer定时器(优先使用hv timer, 其次使用hrtimer), 最后进入Guest模式
+2. 在KVM中, 模拟虚拟机的APIC设置, 先设置这几个寄存器, 然后启用lapic timer定时器(优先使用hv timer, 其次使用hrtimer)作为中断源, 最后进入Guest模式
 3. 
 
 
@@ -72,6 +74,8 @@ int kvm_create_lapic(struct kvm_vcpu *vcpu, int timer_advance_ns)
 首先创建一个**定时器**，然后初始化**APIC Timer设备**产生**中断的函数**，实际就是定时器回调函数。
 
 # 4. 设置定时器Set APIC Timer
+
+
 
 ## 4.1. 定时器的触发
 
