--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -31,7 +31,7 @@
 从图中可以看到, timer中断大概分为下面几步
 
 1. 虚拟机设置APIC timer, 主要包括两个, 写IMICT寄存器(用于one-shot/period模式); 写TSCDEADLINE MSR寄存器(用于tscdeadline模式). 从而发生vm-exit, 进入KVM中
-2. 在KVM中, 模拟虚拟机的APIC设置, 先设置这几个寄存器, 然后设置虚拟机启用lapic timer定时器(优先使用hv timer, 其次使用hrtimer)作为中断源, 最后进入Guest模式
+2. 在KVM中, 模拟虚拟机的APIC设置, 先设置这几个寄存器, 然后启用lapic timer定时器(优先使用hv timer, 其次使用hrtimer)作为中断源, 最后进入Guest模式
 3. timer到期会产生中断, 发生vm-exit, 进入KVM中
 4. KVM中调用timer处理函数
 
@@ -125,6 +125,7 @@ void kvm_set_lapic_tscdeadline_msr(struct kvm_vcpu *vcpu, u64 data)
 ```cpp
 start_apic_timer()  // 启动apic timer定时器
  ├─ __start_apic_timer(apic, APIC_TMICT); // 传入 IMICT 初始计数寄存器
+ |   ├─ atomic_set(&apic->lapic_timer.pending, 0); // 清空lapci timer的pending
  |   ├─ set_target_expiration(apic, count_reg); // 设置到期时间, 当前流程中, 周期性/一次性模式情况下才调用, tscdeadline不会调用
  |   |   ├─ ktime_t now = ktime_get(); // 获取当前ktime
  |   |   ├─ apic->lapic_timer.period = tmict_to_ns(apic, kvm_lapic_get_reg(apic, APIC_TMICT)); // 设置触发周期时间, 即IMICT初始计数寄存器值, 即TMICT寄存器的值(只不过转换成ns单位)
@@ -190,6 +191,7 @@ static void start_apic_timer(struct kvm_lapic *apic)
 
 static void __start_apic_timer(struct kvm_lapic *apic, u32 count_reg)
 {
+        // 清空lapci timer的pending
         atomic_set(&apic->lapic_timer.pending, 0);
         // APIC timer是周期性模式或者一次性模式 并且
         // 设置到期时间失败的话, 直接返回
