--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -293,7 +293,9 @@ int kvm_pic_init(struct kvm *kvm)
          */
         // 注册master的IO端口读写函数
         kvm_iodevice_init(&s->dev_master, &picdev_master_ops);
+        // 注册slave的IO端口读写函数
         kvm_iodevice_init(&s->dev_slave, &picdev_slave_ops);
+        // 注册eclr的IO端口读写函数
         kvm_iodevice_init(&s->dev_eclr, &picdev_eclr_ops);
         mutex_lock(&kvm->slots_lock);
         // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
@@ -404,7 +406,7 @@ int kvm_ioapic_init(struct kvm *kvm)
         kvm->arch.vioapic = ioapic;
         // 重置ioapic
         kvm_ioapic_reset(ioapic);
-        // 
+        // 初始化ioapic的操作函数
         kvm_iodevice_init(&ioapic->dev, &ioapic_mmio_ops);
         ioapic->kvm = kvm;
         mutex_lock(&kvm->slots_lock);
