--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -112,7 +112,7 @@ kvm_arch_vcpu_create()  // vcpu创建中创建lapic
 
 ### 4.1.2. 代码入口
 
-lapic是每个vcpu一个, 所以在创建vcpu流程中创建了lapic
+lapic是每个vcpu一个, 所以在**创建vcpu流程**中创建了lapic
 
 ```cpp
 int kvm_create_lapic(struct kvm_vcpu *vcpu, int timer_advance_ns)
@@ -182,11 +182,11 @@ qemu代码中中断控制器的kvm内核初始化流程为：
 
 ```cpp
 configure_accelerator
-    |--> accel_init_machine
-        |--> kvm_init
-            |--> kvm_irqchip_create
-                |--> kvm_vm_ioctl(s, KVM_CREATE_IRQCHIP)
-                |--> kvm_init_irq_routing
+ ├─ accel_init_machine
+ |   ├─ kvm_init
+ |   |   ├─ kvm_irqchip_create
+ |   |   |   ├─ kvm_vm_ioctl(s, KVM_CREATE_IRQCHIP)
+ |   |   |   ├─ kvm_init_irq_routing
 
 // kvm-all.c/kvm_init/kvm_irqchip_create
 kvm_vm_ioctl(s, KVM_CREATE_IRQCHIP)
