--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -185,7 +185,7 @@ configure_accelerator
  ├─ accel_init_machine
  |   ├─ kvm_init
  |   |   ├─ kvm_irqchip_create
- |   |   |   ├─ kvm_vm_ioctl(s, KVM_CREATE_IRQCHIP)
+ |   |   |   ├─ kvm_vm_ioctl(s, KVM_CREATE_IRQCHIP) // 让内核态创建一个中断控制器
  |   |   |   ├─ kvm_init_irq_routing
 
 // kvm-all.c/kvm_init/kvm_irqchip_create
