--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -187,6 +187,11 @@ configure_accelerator
  |   |   ├─ kvm_irqchip_create
  |   |   |   ├─ kvm_vm_ioctl(s, KVM_CREATE_IRQCHIP) // 让内核态创建一个中断控制器
  |   |   |   ├─ kvm_init_irq_routing
+ |   |   |   |   ├─ kvm_check_extension(s, KVM_CAP_IRQ_ROUTING); // 检察内核态的Irq routing
+ |   |   ├─ s->irq_set_ioctl = KVM_IRQ_LINE;
+ |   |   ├─ if (kvm_check_extension(s, KVM_CAP_IRQ_INJECT_STATUS)) {
+ |   |   |   ├─ s->irq_set_ioctl = KVM_IRQ_LINE_STATUS;
+ |   |   ├─ } 
 
 // kvm-all.c/kvm_init/kvm_irqchip_create
 kvm_vm_ioctl(s, KVM_CREATE_IRQCHIP)
