--- Auto-Git Commit ---

--- a/Architecture/x86/4. x86中断与异常.md
+++ b/Architecture/x86/4. x86中断与异常.md
@@ -3,6 +3,7 @@
 
 <!-- code_chunk_output -->
 
+- [基本概念](#基本概念)
 - [1. 中断架构](#1-中断架构)
   - [1.2. PIC](#12-pic)
   - [1.3. APIC](#13-apic)
@@ -21,6 +22,14 @@
 - [4. 操作系统对中断/异常的处理流程](#4-操作系统对中断异常的处理流程)
 
 <!-- /code_chunk_output -->
+
+# 基本概念
+
+IRQ是PIC时代的产物，由于ISA设备通常是连接到固定的PIC管脚，所以说一个设备的IRQ实际是指它连接的PIC管脚号。IRQ暗示着中断优先级，例如IRQ0比IRQ3有着更高的优先级。当前进到APIC时代后，或许是出于习惯，人们仍习惯用IRQ表示一个设备的中断号，但对于16以下的IRQ，它们可能不再与IOAPIC的管脚对应，例如PIT此时接的是2号管脚。 Pin是管脚号，通常它表示IOAPIC的管脚（前面说了，PIC时代我们用IRQ）。Pin的最大值受IOAPIC管脚数限制，目前取值范围是`[0,23]`。 
+
+GSI是ACPI引入的概念，全称是Global System Interrupt。它为系统中每个中断源指定一个唯一的中断号.
+
+Vector是CPU的概念，是中断在IDT表中的索引。每个IRQ（或GSI）都对应一个Vector。在PIC模式下，IRQ对应的vector=startvector+IRQ；在APIC模式下，IRQ/GSI的vector由操作系统分配
 
 # 1. 中断架构
 
