--- Auto-Git Commit ---

--- a/Architecture/x86/4. x86中断与异常.md
+++ b/Architecture/x86/4. x86中断与异常.md
@@ -25,12 +25,6 @@
 
 # 基本概念
 
-IRQ是PIC时代的产物，由于ISA设备通常是连接到固定的PIC管脚，所以说一个设备的IRQ实际是指它连接的PIC管脚号。IRQ暗示着中断优先级，例如IRQ0比IRQ3有着更高的优先级。当前进到APIC时代后，或许是出于习惯，人们仍习惯用IRQ表示一个设备的中断号，但对于16以下的IRQ，它们可能不再与IOAPIC的管脚对应，例如PIT此时接的是2号管脚。 Pin是管脚号，通常它表示IOAPIC的管脚（前面说了，PIC时代我们用IRQ）。Pin的最大值受IOAPIC管脚数限制，目前取值范围是`[0,23]`。 
-
-GSI是ACPI引入的概念，全称是Global System Interrupt。它为系统中每个中断源指定一个唯一的中断号.
-
-Vector是CPU的概念，是中断在IDT表中的索引。每个IRQ（或GSI）都对应一个Vector。在PIC模式下，IRQ对应的vector=startvector+IRQ；在APIC模式下，IRQ/GSI的vector由操作系统分配
-
 # 1. 中断架构
 
 从某种意义上, **现代计算机架构**是由**大量的中断事件驱动(！！！**)的. **中断**提供给**外部硬件设备**一种"**打断CPU当前执行任务, 并响应自身服务！！！**"的手段.
@@ -169,17 +163,19 @@ APIC系统中, 中断的发起大致流程如下.
 
 ### 1.6.3. IRQ、GSI和中断向量
 
+
+IRQ号是PIC时代引入的概念,由于ISA设备通常是直接连接到到固定的引脚，所以对于IRQ号描述了设备连接到了PIC的哪个引脚上，同IRQ号直接和中断优先级相关,例如IRQ0比IRQ3的中断优先级更高。IRQ暗示着中断优先级，例如IRQ0比IRQ3有着更高的优先级。当前进到APIC时代后，或许是出于习惯，人们仍习惯用IRQ表示一个设备的中断号，但对于16以下的IRQ，它们可能不再与IOAPIC的管脚对应，例如PIT此时接的是2号管脚。 Pin是管脚号，通常它表示IOAPIC的管脚（前面说了，PIC时代我们用IRQ）。Pin的最大值受IOAPIC管脚数限制，目前取值范围是`[0,23]`。 
+
 GSI 是ACPI 引入的概念，全称是Global System Interrupt。它为系统中**每个中断源**指定一个**唯一的中断号**。
+
+注：ACPI Spec规定PIC的IRQ号必须对应到GSI0-GSI15上。kvm默认支持最大1024个GSI。
 
 如果GSI base 为0，每个管脚的GSI=GSI base + pin，**15以上的GSI号和IRQ值相等**，但是`[0~15]`是**按照规范映射**的，其实试试GSI 2映射到了IRQ 0上了，在KVM中引脚号就是IRQ号。
 
 中断和异常会打断顺序执行的程序流, 转而进入一条完全不同的执行路径.
 
-IRQ号是PIC时代引入的概念,由于ISA设备通常是直接连接到到固定的引脚，所以对于IRQ号描述了设备连接到了PIC的哪个引脚上，同IRQ号直接和中断优先级相关,例如IRQ0比IRQ3的中断优先级更高。
 
-GSI号是ACPI引入的概念，全称是Global System Interrupt，用于为系统中每个中断源指定一个唯一的中断编号。注：ACPI Spec规定PIC的IRQ号必须对应到GSI0-GSI15上。kvm默认支持最大1024个GSI。
-
-中断向量是针对逻辑CPU的概念，用来表示中断在IDT表的索引号，每个IRQ（或者GSI）最后都会被定向到某个Vecotor上。对于PIC上的中断，中断向量 = 32(start vector) + IRQ号。在IOAPIC上的中断被分配的中断向量则是由操作系统分配。
+中断向量vector是针对逻辑CPU的概念，用来表示中断在IDT表的索引号，每个IRQ（或者GSI）最后都会被定向到某个Vecotor上。对于PIC上的中断，中断向量vector = 32(start vector) + IRQ号。在IOAPIC上的中断被分配的中断向量则是由操作系统分配。
 
 ### 1.6.4. 中断的优先级
 
