--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -199,6 +199,8 @@ kvm_vm_ioctl(s, KVM_CREATE_IRQCHIP)
 
 qemu通过kvm的ioctl命令`KVM_CREATE_IRQCHIP`调用到kvm内核模块中，在**内核模块**中**创建和初始化PIC/IOAPIC设备**（创建设备对应的数据结构并将设备注册到总线上）。
 
+更多细节见 https://blog.csdn.net/wanthelping/article/details/47069065 
+
 ### 4.2.2. 整体流程
 
 ```cpp
