--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -10,7 +10,7 @@
     - [4.1.1. 整体流程](#411-整体流程)
     - [4.1.2. 代码入口](#412-代码入口)
   - [4.2. PIC和IOAPIC的创建](#42-pic和ioapic的创建)
-    - [4.2.1. QEMU](#421-qemu)
+    - [4.2.1. 用户态QEMU](#421-用户态qemu)
     - [4.2.2. 整体流程](#422-整体流程)
     - [4.2.3. 入口代码](#423-入口代码)
     - [4.2.4. kvm_pic_init(): 虚拟pic(8259A)的初始化](#424-kvm_pic_init-虚拟pic8259a的初始化)
@@ -176,7 +176,7 @@ nomem:
 
 ## 4.2. PIC和IOAPIC的创建
 
-### 4.2.1. QEMU
+### 4.2.1. 用户态QEMU
 
 qemu代码中中断控制器的kvm内核初始化流程为：
 
@@ -196,6 +196,8 @@ configure_accelerator
 // kvm-all.c/kvm_init/kvm_irqchip_create
 kvm_vm_ioctl(s, KVM_CREATE_IRQCHIP)
 ```
+
+关于IRQ、GSI和Vector见硬件基础部分.
 
 qemu通过kvm的ioctl命令`KVM_CREATE_IRQCHIP`调用到kvm内核模块中，在**内核模块**中**创建和初始化PIC/IOAPIC设备**（创建设备对应的数据结构并将设备注册到总线上）。
 
