--- Auto-Git Commit ---

--- a/Architecture/x86/4. x86中断与异常.md
+++ b/Architecture/x86/4. x86中断与异常.md
@@ -165,21 +165,26 @@ APIC系统中, 中断的发起大致流程如下.
 
 在**现代操作系统**中, 有几个概念和vector常联系在一起使用, 简单介绍下.
 
-⓵ **IRQ**: PIC时代的产物, 由于ISA设备通常是连接到**固定PIC管脚**, 所以说一个设备的IRQ实际是指它连接的PIC管脚号. **IRQ暗示着中断优先级**. 进入到APIC时代后, 仍**习惯**用**IRQ**来表示**一个设备的中断号**, 但对于**16以下的IRQ**, 它们可能**不再与IOAPIC的管脚对应！！！**，例如PIT此时接的是2号管脚。
+⓵ **IRQ**: PIC时代的产物, 由于ISA设备通常是连接到**固定PIC管脚**, 所以说一个设备的IRQ实际是指它连接的PIC管脚号. 
 
-Pin是管脚号，通常它表示IOAPIC的管脚（前面说了，PIC时代我们用IRQ）。Pin的最大值受IOAPIC管脚数限制，目前取值范围是`[0,23]`。 
+**IRQ暗示着中断优先级**, 例如IRQ0比IRQ3有着更高的优先级。. 
 
-⓶ **GSI**(Global System Interrupt): **ACPI引入的概念**, 它为系统中**每个中断源**指定了一个**唯一的中断号**. IRQ和GSI在APIC系统中常被混用, 实际上对于**15以上的IRQ**, 它**和GSI相等**.
+进入到APIC时代后, 仍**习惯**用**IRQ**来表示**一个设备的中断号**, 但对于**16以下的IRQ**, 它们可能**不再与IOAPIC的管脚对应！！！**，例如PIT此时接的是2号管脚。
+
+Pin是管脚号，通常它表示**IOAPIC的管脚**（前面说了，PIC时代我们用IRQ）。Pin的最大值受**IOAPIC管脚数限制**，目前取值范围是`[0,23]`。 
+
+⓶ **GSI**(Global System Interrupt): **ACPI引入的概念**, 它为系统中**每个中断源**指定了一个**唯一的中断号**. 
+
+IRQ和GSI在APIC系统中常被混用, 实际上对于**15以上的IRQ**, 它**和GSI相等**.
+
+注：ACPI Spec规定**PIC的IRQ号**必须对应到`GSI 0 -GSI 15`上。kvm默认支持最大1024个GSI。
+
+如果GSI base 为0，每个管脚的GSI=GSI base + pin，**15以上的GSI号和IRQ值相等**，但是`[0~15]`是**按照ACPI 规范！！！映射**的，其实试试GSI 2映射到了IRQ 0上了，在KVM中引脚号就是IRQ号。
 
 这里, GSI和IRQ可以看作等同的概念, 表示**某个设备的中断号**. 它们与**vector的关系**由操作系统决定, 通常是在**设备驱动注册中断处理程序**时由**操作系统分配**.
 
 
 
-GSI 是ACPI 引入的概念，全称是Global System Interrupt。它为系统中**每个中断源**指定一个**唯一的中断号**。
-
-注：ACPI Spec规定PIC的IRQ号必须对应到GSI0-GSI15上。kvm默认支持最大1024个GSI。
-
-如果GSI base 为0，每个管脚的GSI=GSI base + pin，**15以上的GSI号和IRQ值相等**，但是`[0~15]`是**按照规范映射**的，其实试试GSI 2映射到了IRQ 0上了，在KVM中引脚号就是IRQ号。
 
 中断和异常会打断顺序执行的程序流, 转而进入一条完全不同的执行路径.
 
