--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -10,7 +10,7 @@
     - [4.1.1. 整体流程](#411-整体流程)
     - [4.1.2. 代码入口](#412-代码入口)
   - [4.2. PIC和IOAPIC的创建](#42-pic和ioapic的创建)
-    - [4.2.1. 用户态QEMU](#421-用户态qemu)
+    - [4.2.1. 用户态QEMU中断模块初始化](#421-用户态qemu中断模块初始化)
     - [用户态qemu中断控制器与虚拟PC的关联](#用户态qemu中断控制器与虚拟pc的关联)
     - [4.2.2. 整体流程](#422-整体流程)
     - [4.2.3. 入口代码](#423-入口代码)
@@ -177,7 +177,7 @@ nomem:
 
 ## 4.2. PIC和IOAPIC的创建
 
-### 4.2.1. 用户态QEMU
+### 4.2.1. 用户态QEMU中断模块初始化
 
 qemu代码中中断控制器的kvm内核初始化流程为：
 
@@ -193,9 +193,24 @@ configure_accelerator
  |   |   ├─ if (kvm_check_extension(s, KVM_CAP_IRQ_INJECT_STATUS)) {
  |   |   |   ├─ s->irq_set_ioctl = KVM_IRQ_LINE_STATUS;
  |   |   ├─ } 
+```
 
-// kvm-all.c/kvm_init/kvm_irqchip_create
+在`kvm_init`中
+
+```cpp
+// kvm-all.c
+// 让内核态创建一个中断控制器
+// kvm_init -> kvm_irqchip_create
 kvm_vm_ioctl(s, KVM_CREATE_IRQCHIP)
+// 检察内核态的Irq routing
+//kvm_init_irq_routing -> kvm_check_extension
+kvm_check_extension(s,KVM_CAP_IRQ_ROUTING)
+
+// kvm_init
+s->irq_set_ioctl = KVM_IRQ_LINE;
+if (kvm_check_extension(s, KVM_CAP_IRQ_INJECT_STATUS)) {
+s->irq_set_ioctl = KVM_IRQ_LINE_STATUS;
+}
 ```
 
 关于IRQ、GSI和Vector见硬件基础部分.
