--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -221,7 +221,79 @@ qemu通过kvm的ioctl命令`KVM_CREATE_IRQCHIP`调用到kvm内核模块中，在
 
 ### 用户态qemu中断控制器与虚拟PC的关联
 
+```cpp
+// hw/i386/pc_piix.c
+ pc_init1 ==》
 
+gsi_state = pc_gsi_create(&x86ms->gsi, pcmc->pci_enabled);
+         gsi_state = g_malloc0(sizeof(*gsi_state));
+
+    if (kvm_irqchip_in_kernel()){
+
+       kvm_piix3_setup_irq_routing(pci_enabled);
+
+        gsi =qemu_allocate_irqs(kvm_piix3_gsi_handler, gsi_state,
+
+                                GSI_NUM_PINS);
+
+    }
+
+ 
+
+kvm_piix3_setup_irq_routing ==》
+
+       for (i = 0; i < 8;++i) {
+
+            if (i == 2) {
+
+                continue;
+
+            }
+
+           kvm_irqchip_add_irq_route(s, i,KVM_IRQCHIP_PIC_MASTER, i);
+
+       }
+
+       for (i = 8; i <16; ++i) {
+
+         kvm_irqchip_add_irq_route(s,i, KVM_IRQCHIP_PIC_SLAVE, i - 8);
+
+        }    
+
+     kvm_irqchip_add_irq_route(s, i,KVM_IRQCHIP_IOAPIC, i);
+
+ 
+
+void kvm_irqchip_add_irq_route(KVMState *s, int irq, intirqchip, int pin)
+
+{
+
+    structkvm_irq_routing_entry e;
+
+ 
+
+    e.gsi = irq;
+
+    e.type =KVM_IRQ_ROUTING_IRQCHIP;
+
+    e.flags = 0;
+
+    e.u.irqchip.irqchip =irqchip;
+
+    e.u.irqchip.pin = pin;
+
+   kvm_add_routing_entry(s, &e);
+
+}
+
+kvm_add_routing_entry ==》 kvm_vm_ioctl(s, KVM_SET_GSI_ROUTING, s->irq_routes);
+
+ 
+
+gsi = qemu_allocate_irqs(kvm_piix3_gsi_handler, gsi_state,
+
+                                GSI_NUM_PINS);
+```
 
 ### 4.2.2. 整体流程
 
