--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -223,9 +223,23 @@ qemu通过kvm的ioctl命令`KVM_CREATE_IRQCHIP`调用到kvm内核模块中，在
 
 ```cpp
 // hw/i386/pc_piix.c
- pc_init1 ==》
-
+pc_init1() ->
 gsi_state = pc_gsi_create(&x86ms->gsi, pcmc->pci_enabled);
+// hw/i386/pc.c
+GSIState *pc_gsi_create(qemu_irq **irqs, bool pci_enabled)
+{
+    GSIState *s;
+
+    s = g_new0(GSIState, 1);
+    if (kvm_ioapic_in_kernel()) {
+        kvm_pc_setup_irq_routing(pci_enabled);
+    }
+    *irqs = qemu_allocate_irqs(gsi_handler, s, GSI_NUM_PINS);
+
+    return s;
+}
+
+
          gsi_state = g_malloc0(sizeof(*gsi_state));
 
     if (kvm_irqchip_in_kernel()){
