--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -239,66 +239,79 @@ GSIState *pc_gsi_create(qemu_irq **irqs, bool pci_enabled)
     return s;
 }
 
-
-         gsi_state = g_malloc0(sizeof(*gsi_state));
-
-    if (kvm_irqchip_in_kernel()){
-
-       kvm_piix3_setup_irq_routing(pci_enabled);
-
-        gsi =qemu_allocate_irqs(kvm_piix3_gsi_handler, gsi_state,
-
-                                GSI_NUM_PINS);
-
-    }
-
- 
-
-kvm_piix3_setup_irq_routing ==》
-
-       for (i = 0; i < 8;++i) {
-
-            if (i == 2) {
-
-                continue;
-
-            }
-
-           kvm_irqchip_add_irq_route(s, i,KVM_IRQCHIP_PIC_MASTER, i);
-
-       }
-
-       for (i = 8; i <16; ++i) {
-
-         kvm_irqchip_add_irq_route(s,i, KVM_IRQCHIP_PIC_SLAVE, i - 8);
-
-        }    
-
-     kvm_irqchip_add_irq_route(s, i,KVM_IRQCHIP_IOAPIC, i);
-
- 
-
-void kvm_irqchip_add_irq_route(KVMState *s, int irq, intirqchip, int pin)
-
+// hw/i386/kvm/ioapic.c
+/* PC Utility function */
+void kvm_pc_setup_irq_routing(bool pci_enabled)
 {
+    KVMState *s = kvm_state;
+    int i;
 
-    structkvm_irq_routing_entry e;
-
- 
-
-    e.gsi = irq;
-
-    e.type =KVM_IRQ_ROUTING_IRQCHIP;
-
-    e.flags = 0;
-
-    e.u.irqchip.irqchip =irqchip;
-
-    e.u.irqchip.pin = pin;
-
-   kvm_add_routing_entry(s, &e);
-
+    if (kvm_check_extension(s, KVM_CAP_IRQ_ROUTING)) {
+        for (i = 0; i < 8; ++i) {
+            if (i == 2) {
+                continue;
+            }
+            kvm_irqchip_add_irq_route(s, i, KVM_IRQCHIP_PIC_MASTER, i);
+        }
+        for (i = 8; i < 16; ++i) {
+            kvm_irqchip_add_irq_route(s, i, KVM_IRQCHIP_PIC_SLAVE, i - 8);
+        }
+        if (pci_enabled) {
+            for (i = 0; i < 24; ++i) {
+                if (i == 0) {
+                    kvm_irqchip_add_irq_route(s, i, KVM_IRQCHIP_IOAPIC, 2);
+                } else if (i != 2) {
+                    kvm_irqchip_add_irq_route(s, i, KVM_IRQCHIP_IOAPIC, i);
+                }
+            }
+        }
+        kvm_irqchip_commit_routes(s);
+    }
 }
+
+void kvm_irqchip_add_irq_route(KVMState *s, int irq, int irqchip, int pin)
+{
+    struct kvm_irq_routing_entry e = {};
+
+    assert(pin < s->gsi_count);
+
+    e.gsi = irq;
+    e.type = KVM_IRQ_ROUTING_IRQCHIP;
+    e.flags = 0;
+    e.u.irqchip.irqchip = irqchip;
+    e.u.irqchip.pin = pin;
+    kvm_add_routing_entry(s, &e);
+}
+
+static void kvm_add_routing_entry(KVMState *s,
+                                  struct kvm_irq_routing_entry *entry)
+{
+    struct kvm_irq_routing_entry *new;
+    int n, size;
+
+    if (s->irq_routes->nr == s->nr_allocated_irq_routes) {
+        n = s->nr_allocated_irq_routes * 2;
+        if (n < 64) {
+            n = 64;
+        }
+        size = sizeof(struct kvm_irq_routing);
+        size += n * sizeof(*new);
+        s->irq_routes = g_realloc(s->irq_routes, size);
+        s->nr_allocated_irq_routes = n;
+    }
+    n = s->irq_routes->nr++;
+    new = &s->irq_routes->entries[n];
+
+    *new = *entry;
+
+    set_gsi(s, entry->gsi);
+}
+
+static void set_gsi(KVMState *s, unsigned int gsi)
+{
+    set_bit(gsi, s->used_gsi_bitmap);
+}
+
 
 kvm_add_routing_entry ==》 kvm_vm_ioctl(s, KVM_SET_GSI_ROUTING, s->irq_routes);
 
