--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -232,6 +232,7 @@ GSIState *pc_gsi_create(qemu_irq **irqs, bool pci_enabled)
 
     s = g_new0(GSIState, 1);
     if (kvm_ioapic_in_kernel()) {
+        // 设置irq路由
         kvm_pc_setup_irq_routing(pci_enabled);
     }
     *irqs = qemu_allocate_irqs(gsi_handler, s, GSI_NUM_PINS);
@@ -247,12 +248,14 @@ void kvm_pc_setup_irq_routing(bool pci_enabled)
     int i;
 
     if (kvm_check_extension(s, KVM_CAP_IRQ_ROUTING)) {
+        // 修改前8个路由信息
         for (i = 0; i < 8; ++i) {
             if (i == 2) {
                 continue;
             }
             kvm_irqchip_add_irq_route(s, i, KVM_IRQCHIP_PIC_MASTER, i);
         }
+        // 修改8-16的路由信息
         for (i = 8; i < 16; ++i) {
             kvm_irqchip_add_irq_route(s, i, KVM_IRQCHIP_PIC_SLAVE, i - 8);
         }
@@ -265,10 +268,12 @@ void kvm_pc_setup_irq_routing(bool pci_enabled)
                 }
             }
         }
+        // 提交irq路由信息
         kvm_irqchip_commit_routes(s);
     }
 }
 
+// 添加irq路由信息
 void kvm_irqchip_add_irq_route(KVMState *s, int irq, int irqchip, int pin)
 {
     struct kvm_irq_routing_entry e = {};
@@ -312,8 +317,24 @@ static void set_gsi(KVMState *s, unsigned int gsi)
     set_bit(gsi, s->used_gsi_bitmap);
 }
 
+void kvm_irqchip_commit_routes(KVMState *s)
+{
+    int ret;
 
-kvm_add_routing_entry ==》 kvm_vm_ioctl(s, KVM_SET_GSI_ROUTING, s->irq_routes);
+    if (kvm_gsi_direct_mapping()) {
+        return;
+    }
+
+    if (!kvm_gsi_routing_enabled()) {
+        return;
+    }
+
+    s->irq_routes->flags = 0;
+    trace_kvm_irqchip_commit_routes();
+    // 通知内核设置gsi routing
+    ret = kvm_vm_ioctl(s, KVM_SET_GSI_ROUTING, s->irq_routes);
+    assert(ret == 0);
+}
 
  
 
