--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -12,6 +12,7 @@
   - [4.2. PIC和IOAPIC的创建](#42-pic和ioapic的创建)
     - [4.2.1. 用户态QEMU中断模块初始化](#421-用户态qemu中断模块初始化)
     - [用户态qemu中断控制器与虚拟PC的关联](#用户态qemu中断控制器与虚拟pc的关联)
+      - [](#)
     - [4.2.2. 整体流程](#422-整体流程)
     - [4.2.3. 入口代码](#423-入口代码)
     - [4.2.4. kvm_pic_init(): 虚拟pic(8259A)的初始化](#424-kvm_pic_init-虚拟pic8259a的初始化)
@@ -235,11 +236,16 @@ GSIState *pc_gsi_create(qemu_irq **irqs, bool pci_enabled)
         // 设置irq路由
         kvm_pc_setup_irq_routing(pci_enabled);
     }
+    // 分配gsis
     *irqs = qemu_allocate_irqs(gsi_handler, s, GSI_NUM_PINS);
 
     return s;
 }
+```
 
+#### 
+
+```
 // hw/i386/kvm/ioapic.c
 /* PC Utility function */
 void kvm_pc_setup_irq_routing(bool pci_enabled)
@@ -335,6 +341,9 @@ void kvm_irqchip_commit_routes(KVMState *s)
     ret = kvm_vm_ioctl(s, KVM_SET_GSI_ROUTING, s->irq_routes);
     assert(ret == 0);
 }
+
+
+
 
  
 
