--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -12,7 +12,8 @@
   - [4.2. PIC和IOAPIC的创建](#42-pic和ioapic的创建)
     - [4.2.1. 用户态QEMU中断模块初始化](#421-用户态qemu中断模块初始化)
     - [用户态qemu中断控制器与虚拟PC的关联](#用户态qemu中断控制器与虚拟pc的关联)
-      - [](#)
+      - [设置ioapic的irq路由信息](#设置ioapic的irq路由信息)
+      - [分配gsis](#分配gsis)
     - [4.2.2. 整体流程](#422-整体流程)
     - [4.2.3. 入口代码](#423-入口代码)
     - [4.2.4. kvm_pic_init(): 虚拟pic(8259A)的初始化](#424-kvm_pic_init-虚拟pic8259a的初始化)
@@ -243,9 +244,9 @@ GSIState *pc_gsi_create(qemu_irq **irqs, bool pci_enabled)
 }
 ```
 
-#### 
+#### 设置ioapic的irq路由信息
 
-```
+```cpp
 // hw/i386/kvm/ioapic.c
 /* PC Utility function */
 void kvm_pc_setup_irq_routing(bool pci_enabled)
@@ -341,15 +342,28 @@ void kvm_irqchip_commit_routes(KVMState *s)
     ret = kvm_vm_ioctl(s, KVM_SET_GSI_ROUTING, s->irq_routes);
     assert(ret == 0);
 }
-
-
-
-
+```
+#### 分配gsis
  
+```cpp
+typedef struct IRQState *qemu_irq;
 
-gsi = qemu_allocate_irqs(kvm_piix3_gsi_handler, gsi_state,
+qemu_irq **irqs;
+*irqs = qemu_allocate_irqs(gsi_handler, s, GSI_NUM_PINS);
+```
 
-                                GSI_NUM_PINS);
+irqs定义如下:
+
+```cpp
+struct IRQState {
+    Object parent_obj;
+
+    qemu_irq_handler handler;
+    void *opaque;
+    int n;
+};
+
+irqs->qemu_irq_handler = gsi_handler;
 ```
 
 ### 4.2.2. 整体流程
