--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -11,9 +11,10 @@
     - [4.1.2. 代码入口](#412-代码入口)
   - [4.2. PIC和IOAPIC的创建](#42-pic和ioapic的创建)
     - [4.2.1. 用户态QEMU中断模块初始化](#421-用户态qemu中断模块初始化)
-    - [用户态qemu中断控制器与虚拟PC的关联](#用户态qemu中断控制器与虚拟pc的关联)
+    - [用户态qemu中断控制器ioapic与虚拟PC的关联](#用户态qemu中断控制器ioapic与虚拟pc的关联)
       - [设置ioapic的irq路由信息](#设置ioapic的irq路由信息)
       - [分配gsis](#分配gsis)
+    - [用户态qemu中断控制器pic与虚拟PC的关联](#用户态qemu中断控制器pic与虚拟pc的关联)
     - [4.2.2. 整体流程](#422-整体流程)
     - [4.2.3. 入口代码](#423-入口代码)
     - [4.2.4. kvm_pic_init(): 虚拟pic(8259A)的初始化](#424-kvm_pic_init-虚拟pic8259a的初始化)
@@ -221,10 +222,11 @@ qemu通过kvm的ioctl命令`KVM_CREATE_IRQCHIP`调用到kvm内核模块中，在
 
 更多细节见 https://blog.csdn.net/wanthelping/article/details/47069065 
 
-### 用户态qemu中断控制器与虚拟PC的关联
+### 用户态qemu中断控制器ioapic与虚拟PC的关联
 
 ```cpp
 // hw/i386/pc_piix.c
+// ioapic的
 pc_init1() ->
 gsi_state = pc_gsi_create(&x86ms->gsi, pcmc->pci_enabled);
 
@@ -365,6 +367,12 @@ struct IRQState {
 };
 
 irqs->qemu_irq_handler = gsi_handler;
+```
+
+### 用户态qemu中断控制器pic与虚拟PC的关联
+
+```
+
 ```
 
 ### 4.2.2. 整体流程
