--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第2篇 KVM虚拟化进阶/第9章 其它高级功能/5. qemu命令行参数.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第2篇 KVM虚拟化进阶/第9章 其它高级功能/5. qemu命令行参数.md
@@ -707,6 +707,13 @@ QEMU提供了一些参数，可以让用户**不用安装系统到磁盘**上即
 
 重定向到**虚拟终端**（pty），系统默认自动创建一个新的虚拟终端。
 
+```cpp
+-chardev pty,id=charserial0 -device isa-serial,chardev=charserial0,id=serial0
+```
+
+在host上通过`cat /dev/pts/X`查看dmesg
+
+
 （3）none
 
 不重定向到任何设备。
