--- a/Virtualization/KVM/PV/pv ipi/说明.md
+++ b/Virtualization/KVM/PV/pv ipi/说明.md
@@ -15,7 +15,9 @@ PV IPIs for maximal 128 vCPUs VM, it is big enough for cloud environment
 currently, supporting more vCPUs needs to introduce more complex logic, 
 in the future this might be extended if needed.
 
-在xAPIC/x2APIC physical模式下, 
+在xAPIC/x2APIC physical模式下, ipi是通过写ICR寄存器实现, 而且每写一次造成一次vm-exit, 所以在大规格子机中广播ipi会有很大开销.
+
+在x2APIC 
 
 
 IPI(核间中断)是通过写ICR寄存器实现, 而每写一次ICR就会产生一次vmexit, 所以大规格子机中广播IPI会带来很大的开销, 会有很明显的性能下降, 而现有机制已基本没有优化空间. 
